--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://player.codemao.cn/old/187028398" width="100%" height="100%"></iframe>
+<iframe src="https://player.codemao.cn/old/187028398"></iframe>
