--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         
         <h1>Domain Transfer</h1>
         <p>We have transferred our domain from <strong>pitaya.cyou</strong> to <strong>daztab.com</strong>. Please update your bookmarks accordingly.</p>
-        <a href="http://zigaow.com" class="redirect-button">Go to daztab.com</a>
+        <a href="http://daztab.com" class="redirect-button">Go to daztab.com</a>
     </div>
     
     <div class="footer">
