--- a/zh/index.html
+++ b/zh/index.html
@@ -138,7 +138,7 @@
         
         <h1>域名转移</h1>
         <p>我们已将域名从<strong>pitaya.cyou</strong>转移到<strong>daztab.com</strong>。请相应地更新您的书签。</p>
-        <a href="http://zigaow.com" class="redirect-button">前往 daztab.com</a>
+        <a href="http://daztab.com" class="redirect-button">前往 daztab.com</a>
     </div>
     
     <div class="footer">
